# rag-renault

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.db.yml  pyproject.toml
data/youtube_transcripts/: PLAN_STRATEGIQUE_RENAULUTION_2021.txt  Résultats_financiers_2021.txt  Résultats_financiers_2022.txt  Résultats_financiers_2023.txt  Résultats_financiers_2024.txt
lib/: agent_app.py  chunker.py  extract_unstructured_data_from_pdf.py  extract_youtube_transcriptions.py  get_unstructured_data_descriptions.py  loaders.py  rag_app.py  renault_agent.py  retriever.py  store.py  utils.py
lib/config/: cache_manager.py  logger.py  settings.py
