[project]
name = "rag-renault"
version = "0.1.0"
description = ""
authors = [
    {name = "Siwar ABBES",email = "siwarabbes2805@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openai (>=1.66.5,<2.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "timescale-vector (>=0.0.7,<0.0.8)",
    "instructor (>=1.7.7,<2.0.0)",
    "anthropic (>=0.49.0,<0.50.0)"
]

[tool.poetry]
packages = [{include = "app"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Enable autofix for all enabled rules
fix = true