[project]
name = "rag-renault"
version = "0.1.0"
description = "RAG on Renault documents"
authors = [
    {name = "siwarabbes2805@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain (>=0.3.21)",
    "youtube-transcript-api (==0.6.3)",
    "pytube (>=15.0.0,<16.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "yt-dlp (>=2025.2.19,<2026.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "pymupdf (>=1.25.4,<2.0.0)",
    "tabula (>=1.0.5,<2.0.0)",
    "tabula-py (>=2.10.0,<3.0.0)",
    "camelot-py (>=1.0.0,<2.0.0)",
    "python-magic-bin (>=0.4.14,<0.5.0)",
    "langchain-openai (>=0.3.9,<0.4.0)",
    "langchain-groq (>=0.3.1,<0.4.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "psycopg-binary (>=3.2.6,<4.0.0)",
    "pi-heif (>=0.22.0,<0.23.0)",
    "unstructured-inference (>=0.8.10,<0.9.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "unstructured[all-docs] (>=0.17.2,<0.18.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-postgres (>=0.0.13,<0.0.14)",
    "solara (>=1.44.1,<2.0.0)",
    "langgraph (>=0.3.20,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

